--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,10 +29,17 @@
 }
 
 html {
-  overflow: hidden;
+  height: fit-content;
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+body {
+  height: fit-content;
 }
 
 .main {
+  min-height: 100%;
   height: 100vh;
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-start-rgb));
@@ -45,7 +52,8 @@ html {
 }
 
 .main-2 {
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-start-rgb));
 }
@@ -113,6 +121,18 @@ html {
 
 .sy {
   background-color: #1db954;
+}
+
+.bp {
+  image-rendering: pixelated;
+}
+
+.new-song {
+  background-color: rgb(var(--background-start-rgb));
+}
+
+.title-border {
+  background-color: rgb(var(--background-start-rgb));
 }
 
 #selected-month {
