--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"rel="stylesheet");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -29,9 +29,10 @@
 }
 
 html {
-  height: fit-content;
+  height: 100vh;
   overflow-y: auto;
   overflow-x: auto;
+  font-family: "Noto Sans";
 }
 
 body {
@@ -133,6 +134,11 @@ body {
 
 .title-border {
   background-color: rgb(var(--background-start-rgb));
+}
+
+.lt {
+  font-weight: 300;
+  font-family: "Noto Sans";
 }
 
 #selected-month {
