--- a/styles/globals.css
+++ b/styles/globals.css
@@ -155,6 +155,18 @@ nav {
 dialog {
   outline: 0;
   padding: 0;
+  animation: 0.2s popIn ease-in forwards;
+}
+
+@keyframes popIn {
+  0% {
+    opacity: 0;
+    transform: translateY(5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 .txt-area {
